--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./View/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Advice generator app</title>
-  <link rel="stylesheet" href="/View/CSS/style.css">
+  <link rel="stylesheet" href="./View/CSS/style.css">
 
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -31,6 +31,6 @@
     Coded by <a href="https://github.com/RiCharde16" target="_blank">Richard Silva Costa</a>.
   </div>
 
-  <script src="/Controller/Api.js"></script>
+  <script src="./Controller/Api.js"></script>
 </body>
 </html>
